add outline style

--- a/css/common.css
+++ b/css/common.css
@@ -44,3 +44,6 @@ a img {
 
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
   display: block; }
+
+* {
+  outline: none; }
