--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -3,7 +3,7 @@
 //hr line style
 @mixin hr-style($b-style, $b-color) {
   border-width: 1px 0px 0px 0px;
-  border-style: $b-stile;
+  border-style: $b-style;
   border-color: $b-color;
   height: 1px;
 }
