--- a/sass/common.scss
+++ b/sass/common.scss
@@ -1,8 +1,8 @@
 @charset "utf-8";
 //common.scss
 
-//reset
-@import "compass/reset";
+//import normalize.scss(hail2u/normalize.scss)
+@import "normalize";
 //import all compass
 @import "compass";
 //import mixins
