--- a/css/common.css
+++ b/css/common.css
@@ -1,9 +1,54 @@
 @charset "UTF-8";
-/*!! _normalize.css v2.1.2 | MIT License | http://github.com/hail2u/normalize.scss */
-/* =============================================================================
+/*! normalize.css v2.1.3 | MIT License | git.io/normalize */
+/* ==========================================================================
    HTML5 display definitions
    ========================================================================== */
-/* =============================================================================
+/**
+ * Correct `block` display not defined in IE 8/9.
+ */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+main,
+nav,
+section,
+summary {
+  display: block;
+}
+
+/**
+ * Correct `inline-block` display not defined in IE 8/9.
+ */
+audio,
+canvas,
+video {
+  display: inline-block;
+}
+
+/**
+ * Prevent modern browsers from displaying `audio` without controls.
+ * Remove excess height in iOS 5 devices.
+ */
+audio:not([controls]) {
+  display: none;
+  height: 0;
+}
+
+/**
+ * Address `[hidden]` styling not present in IE 8/9.
+ * Hide the `template` element in IE, Safari, and Firefox < 22.
+ */
+[hidden],
+template {
+  display: none;
+}
+
+/* ==========================================================================
    Base
    ========================================================================== */
 /**
@@ -27,9 +72,16 @@ body {
   margin: 0;
 }
 
-/* =============================================================================
+/* ==========================================================================
    Links
    ========================================================================== */
+/**
+ * Remove the gray background color from active links in IE 10.
+ */
+a {
+  background: transparent;
+}
+
 /**
  * Address `outline` inconsistency between Chrome and other browsers.
  */
@@ -45,7 +97,7 @@ a:hover {
   outline: 0;
 }
 
-/* =============================================================================
+/* ==========================================================================
    Typography
    ========================================================================== */
 /**
@@ -73,11 +125,10 @@ strong {
 }
 
 /**
- * Address styling not present in IE 8/9.
+ * Address styling not present in Safari 5 and Chrome.
  */
-mark {
-  background: #ff0;
-  color: #000;
+dfn {
+  font-style: italic;
 }
 
 /**
@@ -148,10 +199,7 @@ sub {
   bottom: -0.25em;
 }
 
-/* =============================================================================
-   Lists
-   ========================================================================== */
-/* =============================================================================
+/* ==========================================================================
    Embedded content
    ========================================================================== */
 /**
@@ -168,7 +216,7 @@ svg:not(:root) {
   overflow: hidden;
 }
 
-/* =============================================================================
+/* ==========================================================================
    Figures
    ========================================================================== */
 /**
@@ -178,7 +226,7 @@ figure {
   margin: 0;
 }
 
-/* =============================================================================
+/* ==========================================================================
    Forms
    ========================================================================== */
 /**
@@ -228,6 +276,17 @@ input {
 }
 
 /**
+ * Address inconsistent `text-transform` inheritance for `button` and `select`.
+ * All other form control elements do not inherit `text-transform` values.
+ * Correct `button` style inheritance in Chrome, Safari 5+, and IE 8+.
+ * Correct `select` style inheritance in Firefox 4+ and Opera.
+ */
+button,
+select {
+  text-transform: none;
+}
+
+/**
  * 1. Avoid the WebKit bug in Android 4.0.* where (2) destroys native `audio`
  *    and `video` controls.
  * 2. Correct inability to style clickable `input` types in iOS.
@@ -253,8 +312,8 @@ html input[disabled] {
 }
 
 /**
- * 1. Address box sizing set to `content-box` in IE 8/9.
- * 2. Remove excess padding in IE 8/9.
+ * 1. Address box sizing set to `content-box` in IE 8/9/10.
+ * 2. Remove excess padding in IE 8/9/10.
  */
 input[type="checkbox"],
 input[type="radio"] {
@@ -307,7 +366,7 @@ textarea {
   /* 2 */
 }
 
-/* =============================================================================
+/* ==========================================================================
    Tables
    ========================================================================== */
 /**
