--- a/sass/common.scss
+++ b/sass/common.scss
@@ -1,7 +1,7 @@
 @charset "utf-8";
 //common.scss
 
-//import normalize.scss(hail2u/normalize.scss)
+//import normalize.css(necolas/normalize.css)
 @import "normalize";
 //import all compass
 @import "compass";
