--- a/css/common.css
+++ b/css/common.css
@@ -387,7 +387,7 @@ body {
   background-color: white;
   color: #333333;
   line-height: 1.6;
-  font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, sans-selif;
+  font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
 }
 
 hr {
