--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -4,11 +4,10 @@
 //color
 $white: #FFF;
 $black: #333;
-$color-primary:#666666;
-$color-secondary:#cccccc;
+$color-primary: #666666;
+$color-secondary: #cccccc;
 
 //font
 $font-size: 100%;
 $line-height: 1.6;
-$font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, sans-selif;
-
+$font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
