--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -4,10 +4,10 @@
 //color
 $white: #FFF;
 $black: #333;
-$color-primary: #666666;
-$color-secondary: #cccccc;
+$color-primary: #666;
+$color-secondary: #ccc;
 
 //font
 $font-size: 100%;
 $line-height: 1.6;
-$font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
+$font-family: "游ゴシック", "Yu Gothic", "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, sans-serif;
