--- a/sass/common.scss
+++ b/sass/common.scss
@@ -26,12 +26,12 @@ button,
 input,
 select,
 textarea {
-    color: #222;
+    color: $black;
 }
 
 html {
-    font-size: 1em;
-    line-height: 1.4;
+    font-size:   $font-size;
+    line-height: $line-height;
 }
 
 /*
@@ -114,15 +114,7 @@ textarea {
 
 body {
   background-color: $white;
-  color: $black;
-  line-height: $line-height;
   font-family: $font-family;
-}
-
-hr {
-  $b-style: dotted;
-  $b-color: #ccc;
-  @include hr-style($b-style, $b-color);
 }
 
 
