--- a/css/common.css
+++ b/css/common.css
@@ -8,17 +8,10 @@
 /* ==========================================================================
    Base styles: opinionated defaults
    ========================================================================== */
-html,
-button,
-input,
-select,
-textarea {
-  color: #333333;
-}
-
 html {
-  font-size: 100%;
-  line-height: 1.6;
+  color: #222;
+  font-size: 1em;
+  line-height: 1.4;
 }
 
 /*
@@ -55,6 +48,7 @@ hr {
 audio,
 canvas,
 img,
+svg,
 video {
   vertical-align: middle;
 }
@@ -117,6 +111,14 @@ table th, table td {
   padding: 0;
 }
 
+.img-test {
+  width: 160px;
+  height: 16px;
+  background-image: url(../img/btn_home.jpg);
+  background-position: 0 0;
+  background-repeat: no-repeat;
+}
+
 /**
  * My common class
  */
@@ -138,24 +140,6 @@ table th, table td {
 /* ==========================================================================
    Helper classes
    ========================================================================== */
-/*
- * Image replacement
- */
-.ir {
-  background-color: transparent;
-  border: 0;
-  overflow: hidden;
-  /* IE 6/7 fallback */
-  *text-indent: -9999px;
-}
-
-.ir:before {
-  content: "";
-  display: block;
-  width: 0;
-  height: 150%;
-}
-
 /*
  * Hide from both screenreaders and browsers: h5bp.com/u
  */
@@ -222,14 +206,6 @@ table th, table td {
   clear: both;
 }
 
-/*
- * For IE 6/7 only
- * Include this rule to trigger hasLayout and contain floats.
- */
-.clearfix {
-  *zoom: 1;
-}
-
 /* ==========================================================================
    EXAMPLE Media Queries for Responsive Design.
    These examples override the primary ('mobile first') styles.
@@ -270,7 +246,6 @@ table th, table td {
   /*
    * Don't show links for images, or javascript/internal links
    */
-  .ir a:after,
   a[href^="javascript:"]:after,
   a[href^="#"]:after {
     content: "";
@@ -295,10 +270,6 @@ table th, table td {
   img {
     max-width: 100% !important;
   }
-
-  @page {
-    margin: 0.5cm;
-}
 
   p,
   h2,
