--- a/css/common.css
+++ b/css/common.css
@@ -82,12 +82,21 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-/**
- * My common style for elements
- */
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
 body {
   background-color: white;
   font-family: "游ゴシック", "Yu Gothic", "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, sans-serif;
+}
+
+ul {
+  margin: 0;
+  padding-left: 0;
+  list-style: none;
 }
 
 /* default table style */
@@ -141,7 +150,7 @@ table th, table td {
    Helper classes
    ========================================================================== */
 /*
- * Hide from both screenreaders and browsers: h5bp.com/u
+ * Hide visually and from screen readers: h5bp.com/u
  */
 .hidden {
   display: none !important;
@@ -149,7 +158,7 @@ table th, table td {
 }
 
 /*
- * Hide only visually, but have it available for screenreaders: h5bp.com/v
+ * Hide only visually, but have it available for screen readers: h5bp.com/v
  */
 .visuallyhidden {
   border: 0;
@@ -177,7 +186,7 @@ table th, table td {
 }
 
 /*
- * Hide visually and from screenreaders, but maintain layout
+ * Hide visually and from screen readers, but maintain layout
  */
 .invisible {
   visibility: hidden;
