--- a/sass/common.scss
+++ b/sass/common.scss
@@ -285,13 +285,13 @@ table {
         text-decoration: underline;
     }
 
-    a[href]:after {
-        content: " (" attr(href) ")";
-    }
+//    a[href]:after {
+//        content: " (" attr(href) ")";
+//    }
 
-    abbr[title]:after {
-        content: " (" attr(title) ")";
-    }
+//    abbr[title]:after {
+//        content: " (" attr(title) ")";
+//    }
 
     /*
      * Don't show links for images, or javascript/internal links
