--- a/css/common.css
+++ b/css/common.css
@@ -83,13 +83,13 @@ textarea {
    Author's custom styles
    ========================================================================== */
 * {
-  -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
 body {
-  background-color: white;
+  background-color: #FFF;
   font-family: "游ゴシック", "Yu Gothic", "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, sans-serif;
 }
 
